--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 					<header class="major">
 						<h2>Rates</h2>
 						<h3>75$ + tax for the first hour</h3>
-						<h3>25$ + tax per subsequent hour</h3>
+						<h3>25$ + tax per subsequent half hour</h3>
 						<h3><i>Corporate and bulk rates available</i></h3>
 					</header>
 				<div class="container">
