Scroll book now

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 			<section id="cta" class="wrapper style3">
 				<h2>Booking available from 8am - 9pm <br>7 days a week</br></h2>
 				<ul class="actions">
-					<li><a href="#three" class="button large">Book now!</a></li>
+					<li><a href="#three" class="button large scrolly">Book now!</a></li>
 				</ul>
 			</section>
 
