--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
 				<div class="container">
 					<div class="col-4 col-6-medium col-12-small">
 							<section class="feature fa-briefcase">
-								<h3>Professional</h3>
-								<p>Service by experienced professionals.</p>
+								<h3>Experienced</h3>
+								<p>Service by experienced and friendly staff.</p>
 							</section>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
@@ -53,7 +53,7 @@
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="feature fa-clock-o">
 								<h3>Reliable</h3>
-								<p>Top quality service and results, guaranteed.</p>
+								<p>Top quality service and results.</p>
 							</section>
 						</div>
 					
