--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 						<h3>75$ + tax for the first hour</h3>
 						<h3>25$ + tax per subsequent half hour</h3>
 						<h3><i>Corporate and bulk rates available</i></h3>
+						<h3><b>New!!!</b> TV mounting available for 50$! </h3>
 					</header>
 				<div class="container">
 					<div class="col-4 col-6-medium col-12-small">
