Make phone number clickable

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 
 						<h2>Booking</h2>
 						<p>Call or email to arrange an appointment</p>
-						<p><i class="fa fa-phone" aria-hidden="true"></i> <i><b>613-857-3977</b></i></p>
+						<p><i class="fa fa-phone" aria-hidden="true"></i> <i><b><a href="tel:6138573977">613-857-3977</a></b></i></p>
 						<p><i class="fa fa-envelope-o" aria-hidden="true"></i> <i><a href="mailto:darren-b@sympatico.ca">darren-b@sympatico.ca</a></i></p>
 					</header>
 				</div>
