--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
 					<header class="major">
 						<h2>Rates</h2> 
 						<h4>(Tax not included)</h4>
-						<h3>$75 for the first hour - $25 for each subsequent half hour</h3>
-						<h3>$50 for a wall-mounted TV</h3>
+						<h3>$85 for the first hour - $30 for each subsequent half hour</h3>
+						<h3>$65 for a wall-mounted TV</h3>
 						<h3><i>Corporate and bulk rates available</i></h3>
 					</header>
 					<hr style="width:100%;text-align:left;margin-left:0"> 
@@ -147,7 +147,7 @@
 
 		<!-- CTA -->
 			<section id="cta" class="wrapper style3">
-				<h2>Book any time between 8am - 9pm 7 days a week</br>
+				<h2>Book any time between 8am - 9pm, 7 days a week</br>
 				613-857-3977<br><i class="fa fa-envelope-o" aria-hidden="true"></i> <i><a href="mailto:darren-b@sympatico.ca">darren-b@sympatico.ca</a></i> </h2>
 				<!--<ul class="actions">
 					<li><a href="#three" class="button large scrolly">Book now!</a></li>
